[gd_scene load_steps=2 format=3 uid="uid://la4oj24dn8ud"]

[ext_resource type="Script" path="res://GUI/chapter_selection.gd" id="1_mps78"]

[node name="Chapter_Selection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mps78")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="Chapter1" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Chapter 1"

[node name="Chapter2" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Chapter 2"

[node name="Chapter3" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Chapter 3"

[connection signal="pressed" from="HBoxContainer/Chapter1" to="." method="_on_chapter_1_pressed"]
[connection signal="pressed" from="HBoxContainer/Chapter2" to="." method="_on_chapter_2_pressed"]
[connection signal="pressed" from="HBoxContainer/Chapter3" to="." method="_on_chapter_3_pressed"]
